--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,16 @@ body {
     background-color: black;
     color: antiquewhite;
 }
+.wip{
+    color: red;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+footer{
+    justify-content: center;
+}
