--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 .flex-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
